--- a/Rapidlaunch/Views/Addresses/Index.cshtml
+++ b/Rapidlaunch/Views/Addresses/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+    <h1>Address</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -48,11 +48,18 @@
             <td>
                 @Html.DisplayFor(modelItem => item.country.CountryID)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.AddressID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.AddressID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.AddressID">Delete</a>
-            </td>
+            <td class="tester-editor">
+                <div class="dropdownIndex">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        Data Option
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a asp-action="Edit" asp-route-id="@item.AddressID">Edit</a></li>
+                        <li><a asp-action="Details" asp-route-id="@item.AddressID">Details</a></li>
+                        <li><a asp-action="Delete" asp-route-id="@item.AddressID">Delete</a></li>
+                    </ul>
+                </div>
         </tr>
 }
     </tbody>
