--- a/Rapidlaunch/Views/Shared/_Layout.cshtml
+++ b/Rapidlaunch/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar sticky-top navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-light box-shadows ">
             <div class="container-fluid ">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> <img src="~/Assets/RapidLaunchTester.PNG" , height="60" width="220" /></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> <img src="~/Assets/RapidLaunchTester.PNG" , height="60" width="220 " /> </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -66,7 +66,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" asp-area="" asp-controller="Providers" asp-action="Index">Providers</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="ProviderContacts" asp-action="Index">Provider Contacts </a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Provider Addresses" asp-action="Index">Provider Address</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="ProviderAddresses" asp-action="Index">Provider Address</a>
 
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" asp-area="" asp-controller="ProviderHomePage" asp-action="Index">Provider Home Page </a>
@@ -78,7 +78,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" asp-area="" asp-controller="ITAccounts" asp-action="Index">IT Accounts</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="ITAccountTypes" asp-action="Index">IT Account Types</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="ITAccounts" asp-action="Index">Recognised Addresses</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Addresses" asp-action="Index">Recognised Addresses</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="ITAccounts" asp-action="Index">Recognised Countries</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Roles" asp-action="Index">Roles</a>
                                 <div class="dropdown-divider"></div>
