--- a/Rapidlaunch/Views/Countries/Index.cshtml
+++ b/Rapidlaunch/Views/Countries/Index.cshtml
@@ -23,12 +23,19 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.countryName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.CountryID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CountryID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CountryID">Delete</a>
-            </td>
+            <td class="tester-editor">
+                <div class="dropdownIndex">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        Data Option
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <a asp-action="Edit" asp-route-id="@item.CountryID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.CountryID">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.CountryID">Delete</a>
+                    </ul>
+                    </div>
+            
         </tr>
 }
     </tbody>
