--- a/Rapidlaunch/Views/HomePage/Index.cshtml
+++ b/Rapidlaunch/Views/HomePage/Index.cshtml
@@ -5,13 +5,13 @@
 }
 
     <div class="card-columns">
-        <div class="card; border border-primary">
+        <div class="card">
             <p>  </p>
-            <div style="width:100%; text-align:center ">
-                <a class="card-img-top" asp-area="" asp-controller="LaunchHomePage" asp-action="Index"> <img src="~/Assets/LaunchImg.png" , height="200" width="200" style="text-align:center" /></a>
+            <div style="width:100%; text-align:center; border-color:transparent;">
+                <a class="card-img-top" asp-area="" asp-controller="StaffHomePage" asp-action="Index"> <img src="~/Assets/LaunchImg.png" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
-                <h5 class="card-title">Launch</h5>
+                <h5 class="card-title"><a asp-area="" asp-controller="LaunchHomePage" asp-action="Index"> Launches</a></h5>
                 <p class="card-text">
                     <div class="container-fluid">
                         <a asp-area="" asp-controller="Launches" asp-action="Index"> Launches </a> l <a asp-area="" asp-controller="Schedules" asp-action="Index"> Schedules</a> l
@@ -21,7 +21,7 @@
                 </p>
             </div>
         </div>
-        <div class="card; border border-primary">
+        <div class="card">
             <div style="width:100%; text-align:center">
                 <div class="row">
                     <div class="carousel slide" style="width: 500px; margin: 0 auto">
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>
-        <div class="card p-3 ; border border-primary">
+        <div class="card p-3">
             <div style="width:100%; text-align:center">
                 <div class="row">
                     <div class="carousel slide" style="width: 500px; margin: 0 auto">
@@ -116,14 +116,6 @@
                                             </footer>
                                         </blockquote>
                                     </div>
-                                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Next</span>
-                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -131,24 +123,23 @@
                 </div>
             </div>
         </div>
-        <div class="card ; border border-primary">
+        <div class="card">
             <p>  </p>
             <div style="width:100%; text-align:center">
-                <a class="card-img-top" asp-area="" asp-controller="StaffHomePage" asp-action="Index"> <img src="~/Assets/User Images.jpg" , height="200" width="200" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="StaffHomePage" asp-action="Index"> <img src="~/Assets/staff img.png" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
-                <h5 class="card-title">Staff</h5>
+                <h5 class="card-title"><a asp-area="" asp-controller="StaffHomePage" asp-action="Index"> Staff </a></h5>
                 <p class="card-text">
                     <div class="container-fluid">
                         <a asp-area="" asp-controller="Staffs" asp-action="Index"> Staff </a>
                         l <a asp-area="" asp-controller="StaffSchedules" asp-action="Index"> Staff Schedules</a>
                         l <a asp-area="" asp-controller="StaffAddresses" asp-action="Index"> Staff Addresses</a>
                     </div>
-
                 </p>
             </div>
         </div>
-        <div class="card bg-primary text-white text-center p-3 ; border border-primary">
+        <div class="card bg-primary text-white text-center p-3 ">
             <blockquote class="blockquote mb-0">
                 <p>Log out? </p>
                 <footer class="blockquote-footer">
@@ -158,13 +149,13 @@
                 </footer>
             </blockquote>
         </div>
-        <div class="card ; border border-primary">
+        <div class="card ">
             <div style="width:100%; text-align:center">
                 <p> </p>
                 <a class="card-img-top" asp-area="" asp-controller="SafetyHomePage" asp-action="Index"> <img src="~/Assets/Safety.png" class="rounded" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
-                <h5 class="card-title">Safety</h5>
+                <h5 class="card-title"><a asp-area="" asp-controller="SafetyHomePage" asp-action="Index"> Safety </a></h5>
                 <p class="card-text">
                     <div class="container-fluid">
                         <a asp-area="" asp-controller="StaffSafetyRecords" asp-action="Index"> Staff Safety Records</a>
@@ -174,14 +165,14 @@
             </div>
         </div>
 
-        <div class="card ; border border-primary">
+        <div class="card ">
             <p>  </p>
             <div style="width:100%; text-align:center">
                 <p> </p>
                 <a class="card-img-top" asp-area="" asp-controller="ProviderHomePage" asp-action="Index"> <img src="~/Assets/Provider.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
             </div>
             <div class="card-body">
-                <h5 class="card-title">Provider</h5>
+                <h5 class="card-title"><a asp-area="" asp-controller="ProviderHomePage" asp-action="Index"> Provider </a></h5>
                 <p class="card-text">
                     <div class="container-fluid">
                         <a asp-area="" asp-controller="Providers" asp-action="Index"> Providers</a> l <a asp-area="" asp-controller="ProviderContacts" asp-action="Index"> Contacts</a> l
@@ -190,13 +181,13 @@
                 </p>
             </div>
         </div>
-        <div class="card ; border border-primary">
+        <div class="card ">
             <p>  </p>
             <div style="width:100%; text-align:center">
-                <a class="card-img-top" asp-area="" asp-controller="MiscellaneousHomePage" asp-action="Index"> <img src="~/Assets/LaunchImg.png" , height="200" width="200" style="text-align:center" /></a>
+                <a class="card-img-top" asp-area="" asp-controller="MiscellaneousHomePage" asp-action="Index"> <img src="~/Assets/misc.png" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
-                <h5 class="card-title">Miscellaneous</h5>
+                <h5 class="card-title"><a asp-area="" asp-controller="MiscellaneousHomePage" asp-action="Index"> Miscellaneous</a></h5>
                 <p class="card-text">
                     <div class="container-fluid">
                         <a asp-area="" asp-controller="ITAccounts" asp-action="Index"> Launches </a> l <a asp-area="" asp-controller="ITAccountTypes" asp-action="Index"> Schedules</a> l
@@ -206,5 +197,4 @@
                 </p>
             </div>
         </div>
-
     </div>
