--- a/Rapidlaunch/Views/ITAccountTypes/Index.cshtml
+++ b/Rapidlaunch/Views/ITAccountTypes/Index.cshtml
@@ -21,14 +21,20 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.authorisationLevel)
+            <td> @Html.DisplayFor(modelItem => item.authorisationLevel)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.itAccountTypeID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.itAccountTypeID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.itAccountTypeID">Delete</a>
-            </td>
+           <td class="tester-editor">
+                <div class="dropdownIndex">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        Data Option
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <a asp-action="Edit" asp-route-id="@item.itAccountTypeID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.itAccountTypeID">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.itAccountTypeID">Delete</a>
+                        </ul>
+                </div>
         </tr>
 }
     </tbody>
