--- a/Rapidlaunch/Views/ITAccounts/Index.cshtml
+++ b/Rapidlaunch/Views/ITAccounts/Index.cshtml
@@ -25,10 +25,18 @@
                 @Html.DisplayFor(modelItem => item.itaccountTypeIdentID)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ITAccountID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ITAccountID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ITAccountID">Delete</a>
-            </td>
+            <div class="dropdownIndex">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                    Data Option
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <a asp-action="Edit" asp-route-id="@item.ITAccountID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ITAccountID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ITAccountID">Delete</a>
+                </ul>
+                </div>
+                </td>
         </tr>
 }
     </tbody>
