--- a/Rapidlaunch/Views/ProviderAddresses/Index.cshtml
+++ b/Rapidlaunch/Views/ProviderAddresses/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Rapidlaunch.Models.ProviderAddress>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Provider Address";
 }
 
 <h1>Index</h1>
@@ -19,17 +19,28 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model)
+        {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Provider.ProviderID)
             </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
+            <td class="tester-editor">
+                <div class="dropdownIndex">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        Data Option
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    </ul>
+                </div>
+</td>
         </tr>
-}
+        }
     </tbody>
 </table>
+
+
