--- a/Rapidlaunch/Views/Rockets/Index.cshtml
+++ b/Rapidlaunch/Views/Rockets/Index.cshtml
@@ -30,10 +30,19 @@
             <td>
                 @Html.DisplayFor(modelItem => item.rocketypeID)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.RocketID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.RocketID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.RocketID">Delete</a>
+            <td class="tester-editor">
+                <div class="dropdownIndex">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        Data Option
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <a asp-action="Edit" asp-route-id="@item.RocketID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.RocketID">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.RocketID">Delete</a>
+
+                    </ul>
+                </div>
             </td>
         </tr>
 }
