--- a/Rapidlaunch/Views/StaffHomePage/Index.cshtml
+++ b/Rapidlaunch/Views/StaffHomePage/Index.cshtml
@@ -1,7 +1,130 @@
 ﻿@model IEnumerable<Rapidlaunch.Models.StaffHomePage>
-    @{
-        ViewData["Title"] = "Index";
-    }
-
-    <h1>Index</h1>
-
+@{
+    ViewData["Title"] = "Index";
+}
+<!-- link href="~/css/site.css" rel="stylesheet" />
+    <h1> Staff </h1>
+    <div class="card-deck">
+        <div class="card">
+            <img class="card-img-top" src="Assets/staff img.png" alt="Card image cap">
+            <div class="card-body">
+                <h3 class="card-title"><a asp-area="" asp-controller="Staffs" asp-action="Index"> Staff</a></h3>
+               <p style="text-align:center"><a asp-area="" asp-controller="Staffs" asp-action="Create"> Create</a> l <a asp-area="" asp-controller="Staffs" asp-action="Index"> View</a> </p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top" src="~/Assets/privet.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h3 class="card-title"><a asp-area="" asp-controller="StaffAddresses" asp-action="Index">Staff Addresses</a></h3>
+                <p style="text-align:center"><a asp-area="" asp-controller="StaffAddresses" asp-action="Create"> Create</a> l <a asp-area="" asp-controller="StaffAddresses" asp-action="Index"> View</a> </p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top" src="~/Assets/gantt.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h3 class="card-title"><a asp-area="" asp-controller="LaunchStaffSchedules" asp-action="Index"> Staff Schedules</a></h3>
+                <p style="text-align:center"><a asp-area="" asp-controller="LaunchStaffSchedules" asp-action="Create"> Create</a> l <a asp-area="" asp-controller="LaunchStaffSchedules" asp-action="Index"> View</a> </p>
+            </div>
+        </div>
+    </div>
+-->
+<h1> Staff Home Page</h1>
+<div class="card-columns">
+    <div class="card">
+        <p>  </p>
+        <div style="width:100%; text-align:center; border-color:transparent;">
+            <a class="card-img-top" asp-area="" asp-controller="StaffHomePage" asp-action="Index"> <img src="~/Assets/S.png" , height="200" width="200" style="text-align:center" /></a>
+        </div>
+        <div class="card-body">
+            <h5 class="card-title"><a asp-area="" asp-controller="Staffs" asp-action="Index"> Staff </a></h5>
+            <p class="card-text">
+                <div class="container-fluid">
+                    <a asp-area="" asp-controller="Staffs" asp-action="Create"> Create </a> l <a asp-area="" asp-controller="Staffs" asp-action="Index"> View</a> 
+                </div>
+            </p>
+        </div>
+    </div>
+    <div class="card p-3">
+        <div style="width:100%; text-align:center">
+            <div class="row">
+                <div class="carousel slide" style="width: 500px; margin: 0 auto">
+                    <div class="col align-self-center">
+                        <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active" data-interval="4000">
+                                    <blockquote class="blockquote mb-0 card-body">
+                                        <p>“Neil Armstrong was the first man to walk on the moon. I am the first man to piss his pants on the moon.”</p>
+                                        <footer class="blockquote-footer">
+                                            <small class="text-muted">
+                                                Buzz Aldrin
+                                            </small>
+                                        </footer>
+                                    </blockquote>
+                                </div>
+                                <div class="carousel-item" data-interval="4000">
+                                    <blockquote class="blockquote mb-0 card-body">
+                                        <p>“I looked and looked but I didn't see God.” </p>
+                                        <footer class="blockquote-footer">
+                                            <small class="text-muted">
+                                                Yuri Gagarin
+                                            </small>
+                                        </footer>
+                                    </blockquote>
+                                </div>
+                                <div class="carousel-item" data-interval="4000">
+                                    <blockquote class="blockquote mb-0 card-body">
+                                        <p>“Curiosity is the essence of our existence.” </p>
+                                        <footer class="blockquote-footer">
+                                            <small class="text-muted">
+                                                Buzz Aldrin <cite title="Source Title">Magniuficent Desolation</cite>
+                                            </small>
+                                        </footer>
+                                    </blockquote>
+                                </div>
+                                <div class="carousel-item" data-interval="4000">
+                                    <blockquote class="blockquote mb-0 card-body">
+                                        <p>“Its a fixer-upper of a planet, but we could make it work.”.</p>
+                                        <footer class="blockquote-footer">
+                                            <small class="text-muted">
+                                                Elon Musk
+                                            </small>
+                                        </footer>
+                                    </blockquote>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <p>  </p>
+        <div style="width:100%; text-align:center">
+            <a class="card-img-top" asp-area="" asp-controller="StaffAddresses" asp-action="Staff Address"> <img src="~/Assets/SA.png" , height="200" width="200" style="text-align:center" /></a>
+        </div>
+        <div class="card-body">
+            <h5 class="card-title"><a asp-area="" asp-controller="StaffAddresses" asp-action="Index"> Staff Addresses </a></h5>
+            <p class="card-text">
+                <div class="container-fluid">
+                    <a asp-area="" asp-controller="StaffAddresses" asp-action="Create"> Create </a> l <a asp-area="" asp-controller="StaffAddresses" asp-action="Index"> View</a>
+                </div>
+            </p>
+        </div>
+    </div>
+    <div class="card ">
+        <p>  </p>
+        <div style="width:100%; text-align:center">
+            <p> </p>
+            <a class="card-img-top" asp-area="" asp-controller="LaunchStaffSchedules" asp-action="Index"> <img src="~/Assets/SS.png" class="rounded" , height="200" width="280" style="text-align:center" /></a>
+        </div>
+        <div class="card-body">
+            <h5 class="card-title"><a asp-area="" asp-controller="LaunchStaffSchedules" asp-action="Index"> Staff Schedules </a></h5>
+            <p class="card-text">
+                <div class="container-fluid">
+                    <a asp-area="" asp-controller="LaunchStaffSchedules" asp-action="Create"> Create </a> l <a asp-area="" asp-controller="LaunchStaffSchedules" asp-action="Index"> View</a>
+                </div>
+            </p>
+        </div>
+    </div>
+</div>
